--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.1
 Date: 2013-04-14
 Authors@R: c(person("Emilio", "Torres Manzanera", role = c("aut", "cre"), email = "torres@uniovi.es"))
 Maintainer: Emilio Torres Manzanera <torres@uniovi.es>
-Description: A constant database is a data structure created by Daniel J. Bernstein in his cdb package. Its format consists on a sequence of (key,value)-pairs. This R package replicates the basic utilities of reading (cdbget) and writing (cdbdump) constant databases.
+Description: A constant database is a data structure created by Daniel J. Bernstein in his cdb package. Its format consists on a sequence of (key,value)-pairs. This R package replicates the basic utilities for reading (cdbget) and writing (cdbdump) constant databases.
 Depends: bitops
 Suggests: methods
 URL: http://cdb.r-forge.r-project.org/
